[gd_scene load_steps=24 format=2]

[ext_resource path="res://World/Portals.gd" type="Script" id=1]
[ext_resource path="res://World/Portal.png" type="Texture" id=2]
[ext_resource path="res://Music and Sounds/Teleport.wav" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "Animate",
"speed": 20.0
}, {
"frames": [ SubResource( 37 ) ],
"loop": true,
"name": "Cooldown",
"speed": 1.0
} ]

[sub_resource type="CapsuleShape2D" id=36]
radius = 16.0
height = 12.0

[node name="Portals" type="Node2D"]
script = ExtResource( 1 )

[node name="Portal1" type="Position2D" parent="."]
position = Vector2( -16, 0 )

[node name="Sprite" type="AnimatedSprite" parent="Portal1"]
frames = SubResource( 18 )
animation = "Cooldown"

[node name="PortalDoor1" type="Area2D" parent="Portal1"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal1/PortalDoor1"]
position = Vector2( 0, 3 )
scale = Vector2( 0.8, 0.7 )
shape = SubResource( 36 )

[node name="Portal2" type="Position2D" parent="."]
position = Vector2( 16, 0 )

[node name="Sprite" type="AnimatedSprite" parent="Portal2"]
frames = SubResource( 18 )
animation = "Cooldown"

[node name="PortalDoor2" type="Area2D" parent="Portal2"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal2/PortalDoor2"]
position = Vector2( 0, 3 )
scale = Vector2( 0.8, 0.7 )
shape = SubResource( 36 )

[node name="Cooldown" type="Timer" parent="."]

[node name="TPSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[connection signal="body_entered" from="Portal1/PortalDoor1" to="." method="_on_PortalDoor1_body_entered"]
[connection signal="body_entered" from="Portal2/PortalDoor2" to="." method="_on_PortalDoor2_body_entered"]
[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
